--- a/src/MakefileTasks
+++ b/src/MakefileTasks
@@ -48,7 +48,10 @@ mnkkmn_b32: $(M)
 mnk_lu2: $(M)
 	@$(M) $(IN) 1 121 1
 
-grade2: t_mnk
+fancy_kernel_after_ten_hours_of_tuning: $(M)
+	@$(M) $(IN) 11 114 1
+
+grade2: fancy_kernel_after_ten_hours_of_tuning
 
 tasks2:
 	@echo Task 2
